--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 Django==3.2.13
 django-bootstrap5==22.2
 django-extensions==3.2.1
+django-widget-tweaks==1.4.12
 mysqlclient==2.1.1
 pytz==2022.7
 sqlparse==0.4.3
